# aws-image-workflow

./: aws-image-workflow.code-workspace
.github/workflows/: delete.yaml  main.yaml  main.yml
app/image_resizer/: README.md  pyproject.toml
app/image_resizer/src/image_resizer/: __init__.py  handler.py
app/image_resizer/tests/: s3_event.json  test_handler.py
infra/: 01_bootstrap.yaml  02_data.yaml  03_compute.yaml  04_orchestrator.yaml
